# tap-belvo

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  noxfile.py  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: dynamic-publish.yaml  test.yaml  test.yml  update_catalog.yml  update_openapi.yml
scripts/: update_openapi.py
tap_belvo/: __init__.py  __main__.py  client.py  openapi.json  tap.py
tap_belvo/openapi/: BelvoOpenFinanceApiSpec.json  __init__.py
tap_belvo/streams/: __init__.py  banking.py  core.py  enrichment.py  fiscal.py  links.py
tests/: test_core.py  test_schema_evolution.py
tests/__snapshots__/test_schema_evolution/: test_catalog_changes[banking_accounts].json  test_catalog_changes[banking_owners].json  test_catalog_changes[banking_transactions].json  test_catalog_changes[enrichment_incomes].json  test_catalog_changes[enrichment_recurring_expenses].json  test_catalog_changes[enrichment_risk_insights].json  test_catalog_changes[fiscal_invoices].json  test_catalog_changes[fiscal_tax_compliance_statuses].json  test_catalog_changes[fiscal_tax_retentions].json  test_catalog_changes[fiscal_tax_statuses].json  test_catalog_changes[institutions].json  test_catalog_changes[links].json
