[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.27",
]

[project]
name = "tap-belvo"
description = "Singer tap for Belvo, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "Belvo",
  "ELT",
  "singer.io",
]
license = "Apache-2.0"
maintainers = [ { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" } ]
authors = [ { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "requests~=2.32.3",
  "requests-cache==1.*",
  "singer-sdk~=0.51.0",
  "typing-extensions>=4.15; python_full_version<'3.12'",
]
urls.Documentation = "https://github.com/reservoir-data/tap-belvo#readme"
urls.Homepage = "https://github.com/reservoir-data/tap-belvo"
urls.Source = "https://github.com/reservoir-data/tap-belvo"
scripts."tap-belvo" = "tap_belvo.tap:TapBelvo.cli"

[dependency-groups]
dev = [
  { include-group = "scripts" },
  { include-group = "testing" },
  { include-group = "typing" },
]
scripts = [
  "requests>=2.32.5",
]
testing = [
  "deptry>=0.23",
  "pytest>=8",
  "pytest-subtests>=0.15",
  "singer-sdk[testing]",
  "syrupy>=5",
]
typing = [
  "mypy>=1.18",
  "ty>=0.0.1a21",
  "types-requests>=2.32.3",
  { include-group = "testing" },
]

[tool.hatch.version]
source = "vcs"

[tool.uv]
prerelease = "allow"
preview = true
required-version = ">=0.8"

[tool.ruff]
line-length = 88

lint.select = [ "ALL" ]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
  "ISC001", # single-line-implicit-string-concatenation
]
lint.per-file-ignores."noxfile.py" = [ "ANN" ]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.isort.known-first-party = [ "tap_belvo" ]
lint.isort.required-imports = [ "from __future__ import annotations" ]
lint.pydocstyle.convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = [ "-vvv" ]
filterwarnings = [
  "error",
  "default:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
  "default:'_UnionGenericAlias' is deprecated and slated for removal in Python 3.17:DeprecationWarning",
]

[tool.tox]
min_version = "4.22"
env_list = [
  "dependencies",
  "typing",
  "3.14",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_BELVO_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.dependencies]
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]

[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", "--strict", { replace = "posargs", default = [ "tap_belvo", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_belvo", "tests" ], extend = true } ],
]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
